syntax = "proto3";

package identity.api.v1;

option go_package = "semaphore/auth-identity/identity/v1;identityv1";

message UserLite {
  string id = 1;
  string school_id = 2;
  string email = 3;
  string firstname = 4;
  string lastname = 5;
  string user_type = 6; // student/teacher/admin/dev
}

message UserSummary {
  string id = 1;
  string user_type = 2; // student/teacher/admin/dev
  string firstname = 3;
  string lastname = 4;
}

message GetUserLiteRequest { string user_id = 1; }
message GetUserLiteResponse { UserLite user = 1; }

message ExistsRequest { string user_id = 1; }
message ExistsResponse { bool exists = 1; }

message ValidateStudentDeviceRequest {
  string student_id = 1;
  string device_identifier = 2;
}
message ValidateStudentDeviceResponse {
  bool is_valid = 1;
  string device_id = 2;
  string public_key = 3;
}

message ListUsersSummaryRequest {
  repeated string user_ids = 1;
  string school_id = 2;
}
message ListUsersSummaryResponse { repeated UserSummary users = 1; }

service IdentityQueryService {
  rpc GetUserLite(GetUserLiteRequest) returns (GetUserLiteResponse);
  rpc Exists(ExistsRequest) returns (ExistsResponse);
  rpc ValidateStudentDevice(ValidateStudentDeviceRequest) returns (ValidateStudentDeviceResponse);
  rpc ListUsersSummary(ListUsersSummaryRequest) returns (ListUsersSummaryResponse);
}
